cilium-host-process-identities-poc-demo/v1/auditor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bank-auditor
  labels:
    role: auditor
spec:
  hostNetwork: true
  nodeName: master
  containers:
  - name: ctr
    image: skiibum/testpod:qos
