cilium-host-process-identities-poc-demo/v1/thief.yaml
apiVersion: v1
kind: Pod
metadata:
  name: thief
  labels:
    role: scammer
spec:
  hostNetwork: true
  nodeName: master
  containers:
  - name: ctr
    image: skiibum/testpod:qos
