cilium-host-process-identities-poc-demo/v1/policy-allow-teller-db-access.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-teller-to-access-db"
spec:
  endpointSelector:
    matchLabels:
      role: database
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: teller
